# SafeGuard.AI

./: .dockerignore  .gitignore  CODE_REVIEW.md  Dockerfile  FIXES_APPLIED.md  README.md  app.py  check_tests.txt  download_from_hf.py  dvc.yaml  main.py  metrics.json  params.yaml  pyproject.toml  test_output.txt  upload_to_hf.py
.github/workflows/: build.yml  ci-cd.yaml  code-quality.yml  deploy.yml  tests.yml
src/: stage_01_get_data.py  stage_02_train.py  stage_03_evaluate.py  upload_to_hf.py
templates/: index.html  style.css
tests/: conftest.py  test_app.py  test_data_ingestion.py  test_evaluation.py  test_main.py  test_training.py
