[project]
name = "SafeGuard.AI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12" 

dependencies = [
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "xgboost>=3.2.0",
    "torch==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "torchaudio==2.4.1+cu121",
    "transformers>=5.7.0",
    "tokenizers>=0.22.2",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "huggingface-hub>=1.13.0",
    "dotenv>=0.9.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
